--- a/HeoresIIII/Views/_ViewImports.cshtml
+++ b/HeoresIIII/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using HeoresIIII
-@using HeoresIIII.Models
+﻿@using HeroesIIII
+@using HeroesIIII.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
