load hero ajax run with test code

--- a/HeoresIIII/Views/Game/Index.cshtml
+++ b/HeoresIIII/Views/Game/Index.cshtml
@@ -8,6 +8,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <script src="~/js/Game.js"></script>
+    <link rel="stylesheet" type="text/css" href="~/css/HeroPage.css">
     <title>Hero Page</title>
 </head>
 <body>
@@ -17,19 +18,19 @@
     <h3 style="display:inline-block;margin-left:95px">Level</h3>
     <h3 style="display:inline;margin-left:30px">Skill Point</h3>
     <p></p>
-    <div style="display:inline;margin-left:30px">ATK</div>
-    <div style="display:inline;margin-left:30px">DEF</div>
-    <div style="display:inline;margin-left:30px">AGI</div>
-    <div style="display:inline;margin-left:30px">VIT</div>
+    <div class="atribut" >ATK</div>
+    <div class="atribut" >DEF</div>
+    <div class="atribut" >AGI</div>
+    <div class="atribut" >VIT</div>
     <p></p>
-    <div style="display:inline;margin-left:30px">1</div>
-    <div style="display:inline;margin-left:200px">2</div>
+    <div class="skill">1</div>
+    <div class="skill">2</div>
     <p></p>
-    <div style="display:inline;margin-left:30px">3</div>
-    <div style="display:inline;margin-left:200px">4</div>
+    <div class="skill">3</div>
+    <div class="skill">4</div>
     <p></p>
-    <div style="display:inline;margin-left:30px">5</div>
-    <div style="display:inline;margin-left:200px">6</div>
+    <div class="skill">5</div>
+    <div class="skill">6</div>
     
 </body>
 </html>
