--- a/HeoresIIII/Views/Game/Index.cshtml
+++ b/HeoresIIII/Views/Game/Index.cshtml
@@ -13,15 +13,16 @@
 </head>
 <body>
     <div style="width:90px;height:90px;display:inline-block"></div>
-    <h2 style="display:inline;text-align:center;m">Hero Name</h2>
+    <h2  id="heroname" ></h2>
+    <h2  id="hp" style="display:inline" >Hp: </h2>
     <p></p>
-    <h3 style="display:inline-block;margin-left:95px">Level</h3>
-    <h3 style="display:inline;margin-left:30px">Skill Point</h3>
+    <h3 id="level">Level</h3>
+    <h3 id="skillpoint"></h3>
     <p></p>
-    <div class="atribut" >ATK</div>
-    <div class="atribut" >DEF</div>
-    <div class="atribut" >AGI</div>
-    <div class="atribut" >VIT</div>
+    <div class="atribut" style="margin-left:30px" id="atk" ></div>
+    <div class="atribut" id="def"></div>
+    <div class="atribut" id="agi"></div>
+    <div class="atribut" id="vit"></div>
     <p></p>
     <div class="skill">1</div>
     <div class="skill">2</div>
