--- a/HeoresIIII/Views/Game/Index.cshtml
+++ b/HeoresIIII/Views/Game/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿
+
 @{
     Layout = null;
 }
@@ -12,27 +13,43 @@
     <title>Hero Page</title>
 </head>
 <body>
-    <div style="width:90px;height:90px;display:inline-block"></div>
-    <h2  id="heroname" ></h2>
-    <h2  id="hp" style="display:inline" >Hp: </h2>
-    <p></p>
-    <h3 id="level">Level</h3>
-    <h3 id="skillpoint"></h3>
-    <p></p>
-    <div class="atribut" style="margin-left:30px" id="atk" ></div>
-    <div class="atribut" id="def"></div>
-    <div class="atribut" id="agi"></div>
-    <div class="atribut" id="vit"></div>
-    <p></p>
-    <div class="skill">1</div>
-    <div class="skill">2</div>
-    <p></p>
-    <div class="skill">3</div>
-    <div class="skill">4</div>
-    <p></p>
-    <div class="skill">5</div>
-    <div class="skill">6</div>
+    <div id="top-container">
+        <div id="avatar-container" class="inline" title="Hero Avatar"></div>
+        <div id="name-container" class="inline">
+            <h2 id="name" title="Name"></h2>
+            <h2 class="inline"> | </h2>
+            <h2 id="hp" title="Health Points" class="inline"></h2>
+        </div>
+        <div id="experience-container">
+            <h3 id="level">Level</h3>
+            <h3 id="skillpoint"></h3>
+        </div>
+    </div>
+    <hr/>
     
+    <table id="attributes-container" title="Attributes">
+        <tr>
+            <td class="attribute button" id="atk" title="Attack"></td>
+            <td class="attribute button" id="def" title="Defense"></td>
+            <td class="attribute button" id="agi" title="Agility"></td>
+            <td class="attribute button" id="vit" title="Vitality"></td>
+        </tr>
+    </table>
+    <table id="skills-container" title="Skills">
+        <tr class="skills-row">
+            <td class="skill button" title="CounterAttacck">1</td>
+            <td class="skill button" title="CriticalStrike">2</td>
+        </tr>
+        <tr class="skills-row">
+            <td class="skill button" title="Learning">3</td>
+            <td class="skill button" title="Regenerate">4</td>
+        </tr>
+        <tr class="skills-row">
+            <td class="skill button" title="Revive">5</td>
+            <td class="skill button" title="Scavenge">6</td>
+        </tr>
+    </table>
+
 </body>
 </html>
 
