atribute color change if here has skill point

--- a/HeoresIIII/Views/Game/Index.cshtml
+++ b/HeoresIIII/Views/Game/Index.cshtml
@@ -29,6 +29,12 @@
     
     <table id="attributes-container" title="Attributes">
         <tr>
+            <td class="attribute-title" id="atk_title" title="Attack">ATK</td>
+            <td class="attribute-title" id="def_title" title="Defense">DEF</td>
+            <td class="attribute-title" id="agi_title" title="Agility">AGI</td>
+            <td class="attribute-title" id="vit_title" title="Vitality">VIT</td>
+        </tr>
+        <tr>
             <td class="attribute button" id="atk" title="Attack"></td>
             <td class="attribute button" id="def" title="Defense"></td>
             <td class="attribute button" id="agi" title="Agility"></td>
