User can upgrade hero's attributes

--- a/HeoresIIII/Views/Game/Index.cshtml
+++ b/HeoresIIII/Views/Game/Index.cshtml
@@ -22,7 +22,10 @@
         </div>
         <div id="experience-container">
             <h3 id="level">Level</h3>
+            <div class="inline">
+            <h3 class="inline" style="margin-left:30px">Skillpoints: </h3> 
             <h3 id="skillpoint"></h3>
+            </div>
         </div>
     </div>
     <hr/>
