--- a/HeoresIIII/wwwroot/css/HeroPage.css
+++ b/HeoresIIII/wwwroot/css/HeroPage.css
@@ -2,16 +2,13 @@
     margin-left: 100px;
 }
 
-div, h2, h3 {
-    /*border: 1px solid red;*/
-}
-
 #avatar-container {
     background-color: lightgray;
 }
 
 .attribute {
-    margin-left: 100px
+    margin-left: 100px;
+    background-color: gray;
 }
 
 #skills-container {
@@ -45,7 +42,6 @@ div, h2, h3 {
 
 #skillpoint {
     display: inline;
-    margin-left: 30px
 }
 
 #avatar-container {
