hero avatar fix

--- a/HeoresIIII/Views/Game/Index.cshtml
+++ b/HeoresIIII/Views/Game/Index.cshtml
@@ -14,7 +14,7 @@
 <body>
     <div id="top-container">
         <div id="avatar-container" class="inline" title="Hero Avatar">
-            <img id="avatar" src=""></img>
+            <img id="avatar" src="">
         </div>
         <div id="name-container" class="inline">
             <h2 id="name" title="Name"></h2>
