--- a/HeoresIIII/Views/Game/Index.cshtml
+++ b/HeoresIIII/Views/Game/Index.cshtml
@@ -25,13 +25,6 @@
             <h2 id="hp" title="Health Points" class="inline"></h2>
         </div>
         <div class="grid-heroexp">
-            <div style="display:block">
-                <label style="display:block">
-                    EXP:
-                    <div class="inline" id="expcount">0/100</div>
-                </label>
-                <progress style="width:300px" value="0" max="100" id="expbar"></progress>
-            </div>
             <div id="skillpoint-container">
                 <h4 id="level">Level</h4>
                 <div class="inline">
@@ -39,14 +32,21 @@
                     <h4 id="skillpoint"></h4>
                 </div>
             </div>
+            <div style="display:block">
+                <label style="display:block">
+                    EXP:
+                    <div class="inline" id="expcount">0/100</div>
+                </label>
+                <progress style="width:300px" value="0" max="100" id="expbar"></progress>
+            </div>
         </div>
         <div class="grid-heroattr">
             <table id="attributes-container" title="Attributes" align="center">
                 <tr>
-                    <td class="attribute-title" id="atk_title" title="Attack">ATK</td>
-                    <td class="attribute-title" id="def_title" title="Defense">DEF</td>
-                    <td class="attribute-title" id="agi_title" title="Agility">AGI</td>
-                    <td class="attribute-title" id="vit_title" title="Vitality">VIT</td>
+                    <td class="attribute-title" title="Attack">ATK</td>
+                    <td class="attribute-title" title="Defense">DEF</td>
+                    <td class="attribute-title" title="Agility">AGI</td>
+                    <td class="attribute-title" title="Vitality">VIT</td>
                 </tr>
                 <tr>
                     <td class="attribute button" id="atk" title="Attack"></td>
@@ -76,8 +76,22 @@
             </button>
         </div>
         <div class="grid-enemy">
-            <div> enemy name</div>
-            <div> enemy stat</div>
+            <H3 id="enemy-name"></H3>
+            <h4 id="enemy-hp"></h4>
+            <table id="enemy-attributes-container" title="Attributes" style="display:none" align="center">
+                <tr>
+                    <td class="attribute-title" title="Attack">ATK</td>
+                    <td class="attribute-title" title="Defense">DEF</td>
+                    <td class="attribute-title" title="Agility">AGI</td>
+                    <td class="attribute-title" title="Vitality">VIT</td>
+                </tr>
+                <tr>
+                    <td class="attribute button" id="enemy-atk" title="Attack"></td>
+                    <td class="attribute button" id="enemy-def" title="Defense"></td>
+                    <td class="attribute button" id="enemy-agi" title="Agility"></td>
+                    <td class="attribute button" id="enemy-vit" title="Vitality"></td>
+                </tr>
+            </table>
         </div>
     </div>
 
