Hero page now shows hero's skills, added non-functioning description to backend skills

--- a/HeoresIIII/Views/Game/Index.cshtml
+++ b/HeoresIIII/Views/Game/Index.cshtml
@@ -57,33 +57,47 @@
             </table>
         </div>
         <div class="grid-heroskill">
-            <table id="skills-container" title="Skills" align="center">
+            <table id="skills-container" title="Skills" align="center" class="equalDivide" cellpadding="0" cellspacing="0" >
                 <tr class="skills-row">
-                    <td class="skill button" title="CounterAttacck">1</td>
-                    <td class="skill button" title="CriticalStrike">2</td>
+                    <td class="button" title="Counter-Attack" id="CounterAttack">
+                        <span id="CounterAttack-Icon" class="skill-icon">🤺</span>
+                        <span id="CounterAttack-Desc">asdasda</span>
+                    </td>
+                    <td class="button" title="Critical Strike" id="CriticalStrike">
+                        <span id="CriticalStrike-Icon" class="skill-icon">⚔</span>
+                        <span id="CriticalStrike-Desc">asdasda</span>
+                    </td>
                 </tr>
                 <tr class="skills-row">
-                    <td class="skill button" title="Learning">3</td>
-                    <td class="skill button" title="Regenerate">4</td>
+                    <td class="button" title="Learning" id="Learning">
+                        <span id="Learning-Icon" class="skill-icon">📖</span>
+                        <span id="Learning-Desc">asdasda</span>
+                    </td>
+                    <td class="button" title="Regenerate" id="Regenerate">
+                        <span id="Regenerate-Icon" class="skill-icon">💕</span>
+                        <span id="Regenerate-Desc">asdasda</span>
+                    </td>
                 </tr>
                 <tr class="skills-row">
-                    <td class="skill button" title="Revive">5</td>
-                    <td class="skill button" title="Scavenge">6</td>
+                    <td class="button" title="Revive" id="Revive">
+                        <span id="Revive-Icon" class="skill-icon">💖</span>
+                        <span id="Revive-Desc">asdaasdasdsadadsda</span>
+                    </td>
+                    <td class="button" title="Scavenge" id="Scavenge">
+                        <span id="Scavenge-Icon" class="skill-icon">☠</span>
+                        <span id="Scavenge-Desc">asdasda</span>
+                    </td>
                 </tr>
             </table>
-            <button id="fightbutton">
-                Fight
-            </button>
         </div>
         <div class="grid-enemy">
             <div> enemy name</div>
             <div> enemy stat</div>
+            <button id="fightbutton">
+                Fight
+            </button>
         </div>
     </div>
 
 </body>
 </html>
-
-
-
-
