fight log basic

--- a/HeoresIIII/Views/Game/Index.cshtml
+++ b/HeoresIIII/Views/Game/Index.cshtml
@@ -92,8 +92,9 @@
                     <td class="attribute button" id="enemy-vit" title="Vitality"></td>
                 </tr>
             </table>
+            <div id="fightlog">
+            </div>
         </div>
-    </div>
 
 </body>
 </html>
