--- a/HeoresIIII/Views/Game/Index.cshtml
+++ b/HeoresIIII/Views/Game/Index.cshtml
@@ -61,31 +61,31 @@
                 <tr class="skills-row">
                     <td class="button unselectable" title="Counter-Attack" id="CounterAttack">
                         <span id="CounterAttack-Icon" class="skill-icon">🤺</span>
-                        <span id="CounterAttack-Desc">asdasda</span>
+                        <span id="CounterAttack-Desc">When hit, gives a certain chance of attacking the enemy back.</span>
                     </td>
                     <td class="button unselectable" title="Critical Strike" id="CriticalStrike">
                         <span id="CriticalStrike-Icon" class="skill-icon">⚔</span>
-                        <span id="CriticalStrike-Desc">asdasda</span>
+                        <span id="CriticalStrike-Desc">Gives a small chance of dealing double damage.</span>
                     </td>
                 </tr>
                 <tr class="skills-row">
                     <td class="button unselectable" title="Learning" id="Learning">
                         <span id="Learning-Icon" class="skill-icon">📖</span>
-                        <span id="Learning-Desc">asdasda</span>
+                        <span id="Learning-Desc">Recieve 2 times the experience points for defeating an enemy.</span>
                     </td>
                     <td class="button unselectable" title="Regenerate" id="Regenerate">
                         <span id="Regenerate-Icon" class="skill-icon">💕</span>
-                        <span id="Regenerate-Desc">asdasda</span>
+                        <span id="Regenerate-Desc">Regenerates a small percenage of the Hero's health points after battle.</span>
                     </td>
                 </tr>
                 <tr class="skills-row">
                     <td class="button unselectable" title="Revive" id="Revive">
                         <span id="Revive-Icon" class="skill-icon">💖</span>
-                        <span id="Revive-Desc">asdaasdasdsadadsda</span>
+                        <span id="Revive-Desc">Has a chance of reviving the Hero 1 time.</span>
                     </td>
                     <td class="button unselectable" title="Scavenge" id="Scavenge">
                         <span id="Scavenge-Icon" class="skill-icon">☠</span>
-                        <span id="Scavenge-Desc">asdasda</span>
+                        <span id="Scavenge-Desc">Adds another chance of getting an item from the enemy after battle.</span>
                     </td>
                 </tr>
             </table>
